Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55182

QT_SCALE_FACTOR + libinput = wrong touch coordinates

    XMLWordPrintable

Details

    Description

      QT_SCALE_FACTOR works very well with evdev and tslib. But using this macro with libinput results in wrong touch coordinates.

      Example:
      If I have a physical screen size of 800x600 and set QT_SCALE_FACTOR = 2, then the resulting viewport size is 400 x 300. So far so good.

      When I touch in the middle of the screen, the touchpoint is received at (100, 75) instead of (200,150).

      If there is no scaling active, libinput delivers correct values.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            friedemann Friedemann Metzger
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There are no open Gerrit changes