libinput: Fix high dpi scaling support

Bring it onto the level of evdevtouch.

Task-number: QTBUG-55182
Change-Id: Iaba58234fa6289870d60f0fcc351d4b97655f3e2
Reviewed-by: Andy Nichols <andy.nichols@qt.io>